organized files and changed filepaths

--- a/contact.html
+++ b/contact.html
@@ -9,12 +9,12 @@
   <title>Contact Ashli</title>
 
   <!-- Bootstrap CDN -->
-  <link rel="stylesheet" href="reset.css">
+  <link rel="stylesheet" href="../assets/CSS/reset.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Pontano+Sans&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Grand+Hotel&family=Oswald:wght@300&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="../assets/CSS/style.css" />
 
 </head>
 
@@ -24,7 +24,7 @@
    <nav class="navbar navbar-expand-lg navbar-light bg-blue">
     <div class="navbar-brand" id="name">
       <!--nav bar image-->
-      <img src="navbarimg.png" style="height: 75px; width: 75px; display: inline-block" alt="logo" class="pb-2"/>
+      <img src="../assets/Media/navbarimg.png" style="height: 75px; width: 75px; display: inline-block" alt="logo" class="pb-2"/>
       Ashli Hanson
     </div>
     <!--dropdown menu for navbar-->
@@ -74,7 +74,7 @@
                       <br>
                       <li class="listItems"><a href="https://github.com/ashlinhanson" class="links" target="_blank">GitHub</a></li>
                       <br>
-                      <li class="listItems"><a href="resume.pdf" class="links" target="_blank">Resume</a></li>
+                      <li class="listItems"><a href="assets/Media/resume.pdf" class="links" target="_blank">Resume</a></li>
                     </ul>
                     </div>
                   </p>
