--- a/portfolio.html
+++ b/portfolio.html
@@ -7,12 +7,12 @@
     <title>Ashli's Work</title>
 
     <!-- Bootstrap and CSS links -->
-    <link rel="stylesheet" href="reset.css" />
+    <link rel="stylesheet" href="../assets/CSS/reset.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"/>
     <link href="https://fonts.googleapis.com/css2?family=Pontano+Sans&display=swap" rel="stylesheet"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
     <link href="https://fonts.googleapis.com/css2?family=Grand+Hotel&family=Oswald:wght@300&display=swap" rel="stylesheet"/>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../assets/CSS/style.css" />
   </head>
 
   <body>
@@ -20,7 +20,7 @@
      <nav class="navbar navbar-expand-lg navbar-light bg-blue">
       <div class="navbar-brand" id="name">
         <!--nav bar image-->
-        <img src="navbarimg.png" style="height: 75px; width: 75px; display: inline-block" alt="logo" class="pb-2"/>
+        <img src="../assets/Media/navbarimg.png" style="height: 75px; width: 75px; display: inline-block" alt="logo" class="pb-2"/>
         Ashli Hanson
       </div>
       <!--dropdown menu for navbar-->
@@ -51,7 +51,7 @@
           <!--card 1-->
           <div class="col-md-4">
             <div class="card">
-              <img src="weekday.png" class="card-img-top" alt="Week Day Planner" style="height: 350px"/>
+              <img src="assets/Media/weekday.png" class="card-img-top" alt="Week Day Planner" style="height: 350px"/>
               <div class="card-body">
                 <h5 class="card-title">Week Day Planner</h5>
                 <p class="card-text">
@@ -66,7 +66,7 @@
           <!--card 2-->
           <div class="col-md-4">
             <div class="card">
-              <img src="code-quiz.png" class="card-img-top" alt="place holder image" style="height: 350px"/>
+              <img src="assets/Media/code-quiz.png" class="card-img-top" alt="place holder image" style="height: 350px"/>
               <div class="card-body">
                 <h5 class="card-title">JavaScript Knowledge Quiz</h5>
                 <p class="card-text">
@@ -81,7 +81,7 @@
           <!--card 3-->
           <div class="col-md-4">
             <div class="card">
-              <img src="COVIDCityLimits.png" class="card-img-top" alt="place holder image" style="height: 350px"/>
+              <img src="assets/Media/COVIDCityLimits.png" class="card-img-top" alt="place holder image" style="height: 350px"/>
               <div class="card-body">
                 <h5 class="card-title">COVID City Limits</h5>
                 <p class="card-text">Web application that allows the user to create a festival line-up poster and playlist with the artists chosen.
@@ -101,7 +101,7 @@
           <!--card 4-->
           <div class="col-md-4">
             <div class="card">
-              <img src="folioimg6inv.jpg" class="card-img-top" alt="place holder image"/>
+              <img src="assets/Media/folio-placeholders/folioimg6inv.jpg" class="card-img-top" alt="place holder image"/>
               <div class="card-body">
                 <h5 class="card-title">Future Project</h5>
                 <p class="card-text"></p>
@@ -113,7 +113,7 @@
           <!--card 5-->
           <div class="col-md-4">
             <div class="card">
-              <img src="folioimg7.jpg" class="card-img-top" alt="place holder image"/>
+              <img src="assets/Media/folio-placeholders/folioimg7.jpg" class="card-img-top" alt="place holder image"/>
               <div class="card-body">
                 <h5 class="card-title">Future Project</h5>
                 <p class="card-text"></p>
@@ -125,7 +125,7 @@
           <!--card 6-->
           <div class="col-md-4">
             <div class="card">
-              <img src="folioimg6.jpg" class="card-img-top" alt="place holder image"/>
+              <img src="assets/Media/folio-placeholders/folioimg6.jpg" class="card-img-top" alt="place holder image"/>
               <div class="card-body">
                 <h5 class="card-title">Future Project</h5>
                 <p class="card-text"></p>
