--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <title>About Ashli</title>
 
     <!-- Bootstrap and CSS links -->
-    <link rel="stylesheet" href="reset.css" />
+    <link rel="stylesheet" href="../assets/CSS/reset.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"/>
     <link href="https://fonts.googleapis.com/css2?family=Pontano+Sans&display=swap" rel="stylesheet"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
     <link href="https://fonts.googleapis.com/css2?family=Grand+Hotel&family=Oswald:wght@300&display=swap" rel="stylesheet"/>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../assets/CSS/style.css" />
   </head>
 
   <body>
@@ -20,7 +20,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-blue">
       <div class="navbar-brand" id="name">
         <!--nav bar image-->
-        <img src="navbarimg.png" style="height: 75px; width: 75px; display: inline-block" alt="logo" class="pb-2"/>
+        <img src="../assets/Media/navbarimg.png" style="height: 75px; width: 75px; display: inline-block" alt="logo" class="pb-2"/>
         Ashli Hanson
       </div>
       <!--dropdown menu for navbar-->
@@ -48,7 +48,7 @@
       <div class="jumbotron jumbotron-fluid">
         <div class="container">
           <!--profile photo-->
-          <img src="profile.jpeg" alt="profile" id="profileImg" style="height: 300px"/>
+          <img src="../assets/Media/profile.jpeg" alt="profile" id="profileImg" style="height: 300px"/>
           <!--bio paragraph-->
           <p class="lead">
             My name is Ashli Hanson and I am a Full Stack web developer residing
