--- a/portfolio.html
+++ b/portfolio.html
@@ -7,12 +7,12 @@
     <title>Ashli's Work</title>
 
     <!-- Bootstrap and CSS links -->
-    <link rel="stylesheet" href="../assets/CSS/reset.css" />
+    <link rel="stylesheet" href="assets/CSS/reset.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"/>
     <link href="https://fonts.googleapis.com/css2?family=Pontano+Sans&display=swap" rel="stylesheet"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
     <link href="https://fonts.googleapis.com/css2?family=Grand+Hotel&family=Oswald:wght@300&display=swap" rel="stylesheet"/>
-    <link rel="stylesheet" href="../assets/CSS/style.css" />
+    <link rel="stylesheet" href="assets/CSS/style.css" />
   </head>
 
   <body>
@@ -20,7 +20,7 @@
      <nav class="navbar navbar-expand-lg navbar-light bg-blue">
       <div class="navbar-brand" id="name">
         <!--nav bar image-->
-        <img src="../assets/Media/navbarimg.png" style="height: 75px; width: 75px; display: inline-block" alt="logo" class="pb-2"/>
+        <img src="assets/Media/navbarimg.png" style="height: 75px; width: 75px; display: inline-block" alt="logo" class="pb-2"/>
         Ashli Hanson
       </div>
       <!--dropdown menu for navbar-->
