--- a/portfolio.html
+++ b/portfolio.html
@@ -105,7 +105,7 @@
               <div class="card-body">
                 <h5 class="card-title">Eat Dat Burger</h5>
                 <p class="card-text">This web application allows you to toggle between eating a burger and "uneating" a burger. You can also add a custom burger for you to devour as well.</p>
-                <a href="https://secure-mountain-07591.herokuapp.com/" class="btn btn-primary">Check it out</a>
+                <a href="https://secure-mountain-07591.herokuapp.com/" target="_blank" class="btn btn-primary">Check it out</a>
                 <a href="https://github.com/ashlinhanson/burger" target="_blank" class="btn btn-primary">View the code</a>
               </div>
             </div>
