changed photo, fixed margins with footer

--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
     <!--About Me Bio-->
     <div class="container">
       <h1 class="display-4 text-right" style="font-size: 100px">Hey there!</h1>
-      <div class="jumbotron jumbotron-fluid">
+      <div class="jumbotron jumbotron-fluid my-5">
         <div class="container">
           <!--profile photo-->
-          <img src="assets/Media/profile.jpeg" alt="profile" id="profileImg" style="height: 300px"/>
+          <img src="assets/Media/me.jpeg" alt="profile" id="profileImg" style="height: 300px"/>
           <!--bio paragraph-->
           <p class="lead">
             My name is Ashli Hanson and I am a Full Stack web developer residing
