--- a/portfolio.html
+++ b/portfolio.html
@@ -45,6 +45,7 @@
     <!--Portfolio-->
     <h1 class="folioheader">Project Examples</h1>
     <!--top row of card-->
+  <div class="card my-5" id="backgroundCard">
     <div class="container-folio">
       <div class="col-md-12">
         <div class="row">
@@ -137,6 +138,7 @@
         </div>
       </div>
     </div>
+  </div>
 
     <!--footer-->
     <div class="footer">
