--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     </div>
 
     <!--footer-->
-    <div class="footer">
+    <div class="footer mt-5">
       <a href="https://www.instagram.com/ashlihanson/?hl=en" target="_blank" class="fa fa-instagram"></a>
       <a href="https://www.linkedin.com/in/ashli-hanson-2689091b0/" target="_blank" class="fa fa-linkedin"></a>
       <a href="https://github.com/ashlinhanson" target="_blank" class="fa fa-github"></a>
