added parks n req to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -102,7 +102,7 @@
           <!--card 4-->
           <div class="col-md-4">
             <div class="card">
-              <img src="assets/Media/4.png" class="card-img-top" alt="Eat Dat Burger"/>
+              <img src="assets/Media/4.png" class="card-img-top" alt="Eat Dat Burger" style="height: 350px"/>
               <div class="card-body">
                 <h5 class="card-title">Eat Dat Burger</h5>
                 <p class="card-text">This web application allows you to toggle between eating a burger and "uneating" a burger. You can also add a custom burger for you to devour as well.</p>
@@ -114,19 +114,20 @@
           <!--card 5-->
           <div class="col-md-4">
             <div class="card">
-              <img src="assets/Media/folio-placeholders/folioimg7.jpg" class="card-img-top" alt="place holder image"/>
+              <img src="assets/Media/parks_n_req.png" class="card-img-top" alt="parks_n_req" style="height: 350px"/>
               <div class="card-body">
-                <h5 class="card-title">Future Project</h5>
-                <p class="card-text"></p>
-                <a href="#" class="btn btn-primary">Check it out</a>
-                <a href="#" target="_blank" class="btn btn-primary">View the code</a>
+                <h5 class="card-title">Parks_n_Req</h5>
+                <p class="card-text">This app provides information about Texas NPS parks and campgrounds and allows the user to make a reservation at their selected site.
+                </p>
+                <a href="https://salty-hamlet-73070.herokuapp.com/home.html" class="btn btn-primary">Check it out</a>
+                <a href="https://github.com/ashlinhanson/Parks_n_Req" target="_blank" class="btn btn-primary">View the code</a>
               </div>
             </div>
           </div>
           <!--card 6-->
           <div class="col-md-4">
             <div class="card">
-              <img src="assets/Media/folio-placeholders/folioimg6.jpg" class="card-img-top" alt="place holder image"/>
+              <img src="assets/Media/folio-placeholders/folioimg6.jpg" class="card-img-top" alt="place holder image" style="height: 350px"/>
               <div class="card-body">
                 <h5 class="card-title">Future Project</h5>
                 <p class="card-text"></p>
