--- a/portfolio.html
+++ b/portfolio.html
@@ -127,12 +127,11 @@
           <!--card 6-->
           <div class="col-md-4">
             <div class="card">
-              <img src="assets/Media/folio-placeholders/folioimg6.jpg" class="card-img-top" alt="place holder image" style="height: 350px"/>
+              <img src="assets/Media/managementsys.png" class="card-img-top" alt="Management System" style="height: 350px"/>
               <div class="card-body">
-                <h5 class="card-title">Future Project</h5>
-                <p class="card-text"></p>
-                <a href="#" class="btn btn-primary">Check it out</a>
-                <a href="#" target="_blank" class="btn btn-primary">View the code</a>
+                <h5 class="card-title">Employee Management System</h5>
+                <p class="card-text">This application allows you to enter team members and their contact information to be generated in this template for easy retrieval of imperative info during a team project.</p>
+                <a href="https://github.com/ashlinhanson/employeeManagementTemplate" target="_blank" class="btn btn-primary">View the code</a>
               </div>
             </div>
           </div>
