--- a/index.html
+++ b/index.html
@@ -55,26 +55,27 @@
             in Austin, Texas!
             <br /><br />
             I've spent the majority of my professional career in the service
-            industry and customer service. Most recently I was a shop manager
-            for Summer Moon Coffee for 3 years at the Buda and Trailer
-            locations. Being a manager in a fast paced environment, like a
+            industry and customer service. Most recently, I was a store manager
+            for Summer Moon Coffee for 3 years. Being a manager in a fast paced environment, like a
             coffee shop, really sharpened my problem solving skills and
             multitasking abilities.
             <br /><br />
-            I have chosen a career in the web developing world because I love
-            all that is has to offer. Using my brain and being challenged are
+            Becoming a Web Developer has opening my eyes to what the world really has to offer. Using my brain and being challenged are
             very important to me but I also love having the option to be
-            creative and design.
+            creative and design. Switching career gears like this has revitalized my passion to be better, continue to learn
+            and make my mark on the world for the better. 
             <br /><br />
-            Another big draw to this career is the impact developers can really
-            have on the world. The ability to share information to anyone and
+            The sky is the limit in this realm of the professional world. The ability to share information to anyone and
             everywhere is a gift that I'm excited to work on and take seriously.
-            I want to use these skills to share important information that
-            should be easily accessible to anyone.
+            My goal is to use these skills to share important information that
+            should be easily accessible to anyone with an elevated and stream-lined user experience.
             <br /><br />
-            Eventually, I would love to work fully remote with an organization I
-            fully support so I can work while I travel to the national and state
-            parks across the country.
+            In my spare time I enjoy spending as much time as possible outdoors in nature, whether it's hiking, biking, or just hanging up a hammock between two trees with a book.
+            In an effort to bring nature into my home, I am also an amateur "plant mom". I've taken advantage of the extra time COVID-19 has given me so I can focus on my plants more.
+            There is something that is just so rewarding seeing new growth on a plant. My plant journey has taught me that patience is key and google is your best friend. 
+            It's been a useful lesson for my coding journey as well. 
+            <br /><br />
+            I am currently looking for a full time Front End Web Dev position. I am open to doing freelance work and collaborations. I would love to connect and create together!
           </p>
         </div>
       </div>
