made all one page

--- a/index.html
+++ b/index.html
@@ -80,6 +80,139 @@
         </div>
       </div>
     </div>
+    <h1 class="folioheader">Project Examples</h1>
+    <!--top row of card-->
+  <div class="card my-5" id="backgroundCard">
+    <div class="container-folio">
+      <div class="col-md-12">
+        <div class="row">
+          <!--card 1-->
+          <div class="col-md-4">
+            <div class="card">
+              <img src="assets/Media/weekday.png" class="card-img-top" alt="Week Day Planner" style="height: 350px"/>
+              <div class="card-body">
+                <h5 class="card-title">Week Day Planner</h5>
+                <p class="card-text">
+                  This web application is designed to help the user organize
+                  their workday by the hour.
+                </p>
+                <a href="https://ashlinhanson.github.io/dayPlanner/" target="_blank" class="btn btn-primary">Check it out</a>
+                <a href="https://github.com/ashlinhanson/dayPlanner" target="_blank" class="btn btn-primary">View the code</a>
+              </div>
+            </div>
+          </div>
+          <!--card 2-->
+          <div class="col-md-4">
+            <div class="card">
+              <img src="assets/Media/code-quiz.png" class="card-img-top" alt="place holder image" style="height: 350px"/>
+              <div class="card-body">
+                <h5 class="card-title">JavaScript Knowledge Quiz</h5>
+                <p class="card-text">
+                  This web application is a quiz designed to test the user on
+                  their knowledge of JavaScript.
+                </p>
+                <a href="https://ashlinhanson.github.io/codeQuiz/" target="_blank" class="btn btn-primary">Check it out</a>
+                <a href="https://github.com/ashlinhanson/codeQuiz" target="_blank" class="btn btn-primary">View the code</a>
+              </div>
+            </div>
+          </div>
+          <!--card 3-->
+          <div class="col-md-4">
+            <div class="card">
+              <img src="assets/Media/COVIDCityLimits.png" class="card-img-top" alt="place holder image" style="height: 350px"/>
+              <div class="card-body">
+                <h5 class="card-title">COVID City Limits</h5>
+                <p class="card-text">Web application that allows the user to create a festival line-up poster and playlist with the artists chosen.
+                </p>
+                <a href="https://ashlinhanson.github.io/COVIDCityLimits/" class="btn btn-primary">Check it out</a>
+                <a href="https://github.com/ashlinhanson/COVIDCityLimits" target="_blank" class="btn btn-primary">View the code</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!--bottom row of cards-->
+    <div class="container-folio">
+      <div class="col-md-12">
+        <div class="row">
+          <!--card 4-->
+          <div class="col-md-4">
+            <div class="card">
+              <img src="assets/Media/4.png" class="card-img-top" alt="Eat Dat Burger" style="height: 350px"/>
+              <div class="card-body">
+                <h5 class="card-title">Eat Dat Burger</h5>
+                <p class="card-text">This web application allows you to toggle between eating a burger and "uneating" a burger. You can also add a custom burger for you to devour as well.</p>
+                <a href="https://secure-mountain-07591.herokuapp.com/" target="_blank" class="btn btn-primary">Check it out</a>
+                <a href="https://github.com/ashlinhanson/burger" target="_blank" class="btn btn-primary">View the code</a>
+              </div>
+            </div>
+          </div>
+          <!--card 5-->
+          <div class="col-md-4">
+            <div class="card">
+              <img src="assets/Media/parks_n_req.png" class="card-img-top" alt="parks_n_req" style="height: 350px"/>
+              <div class="card-body">
+                <h5 class="card-title">Parks_n_Req</h5>
+                <p class="card-text">This app provides information about Texas NPS parks and campgrounds and allows the user to make a reservation at their selected site.
+                </p>
+                <a href="https://salty-hamlet-73070.herokuapp.com/home.html" class="btn btn-primary">Check it out</a>
+                <a href="https://github.com/ashlinhanson/Parks_n_Req" target="_blank" class="btn btn-primary">View the code</a>
+              </div>
+            </div>
+          </div>
+          <!--card 6-->
+          <div class="col-md-4">
+            <div class="card">
+              <img src="assets/Media/managementsys.png" class="card-img-top" alt="Management System" style="height: 350px"/>
+              <div class="card-body">
+                <h5 class="card-title">Employee Management System</h5>
+                <p class="card-text">This application allows you to enter team members and their contact information to be generated in this template for easy retrieval of imperative info during a team project.</p>
+                <a href="https://github.com/ashlinhanson/employeeManagementTemplate" target="_blank" class="btn btn-primary">View the code</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="container-contact">
+    <div class="row justify-content-center">
+      <div class="col-sm-6">
+        <div class="page-header">
+        </div>
+        <div class="col-sm-12">
+          <div class="card mt-4">
+            <div class="card-body-contact">
+              <p class="card-text">
+                <div class="container-sm col-sm-12" id="contactContent">
+                  <h1>Lets Connect! </h1>
+                  <p id="contactP">
+                    I would love to hear from you!
+                    <br><br>
+                    <!--Contact list-->
+                    <div class="list">
+                    <h4 id="listTitle"><strong>Ways to reach me :</strong></h4>
+                    <ul>
+                      <br>
+                      <li class="listItems">Email : <a href="mailto:ashlinhanson@gmail.com" class="links">ashlinhanson@gmail.com</a></li>
+                      <br>
+                      <li class="listItems">Phone : (512)704-5368</li>
+                      <br>
+                      <li class="listItems"><a href="https://www.linkedin.com/in/ashlihanson/" class="links" target="_blank">LinkedIn</a></li>
+                      <br>
+                      <li class="listItems"><a href="https://github.com/ashlinhanson" class="links" target="_blank">GitHub</a></li>
+                      <br>
+                      <li class="listItems"><a href="assets/Media/resume.pdf" class="links" target="_blank">Resume</a></li>
+                    </ul>
+                    </div>
+                  </p>
+            </div>
+          </div>
+        </div>
+    </div>
+  </div>
+</div>
 
     <!--footer-->
     <div class="footer mt-5">
