--- a/contact.html
+++ b/contact.html
@@ -94,8 +94,8 @@
                         <button class="btn btn-primary btn-lg">Send it!</button>
                       </div>
                     </form> -->
-                </div>
-            </div>
+                /div>
+            </div><
           </div>
         </div>
     </div>
