--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         <div class="page-header">
         </div>
         <div class="col-sm-12">
-          <div class="card mt-4">
+          <div class="card mt-4" id="contactCard">
             <div class="card-body-contact">
               <p class="card-text">
                 <div class="container-sm col-sm-12" id="contactContent">
