skills completed and done.

--- a/index.html
+++ b/index.html
@@ -54,31 +54,37 @@
               <i class="devicon-javascript-plain" 
                 style="font-size:70px;"
               ></i>
+              <p>JavaScript</p>
               </div>
             <div class="col-2">
               <i class="devicon-bootstrap-plain"
                 style="font-size:70px;"
               ></i>
+              <p>Bootstrap</p>
             </div>
             <div class="col-2">
                 <i class="devicon-nodejs-plain"
                   style="font-size:70px;"
                 ></i>
+                <p>Node.js</p>
             </div>
           <div class="col-2">
             <i class="devicon-react-original"
               style="font-size:70px;"
             ></i>
+            <p>React</p>
           </div>
           <div class="col-2">
             <i class="devicon-html5-plain"
               style="font-size:70px;"
             ></i>
+            <p>HTML5</p>
           </div>
           <div class="col-2">
             <i class="devicon-css3-plain"
               style="font-size:70px;"
             ></i>
+            <p>CSS3</p>
           </div>
         </div>
           <div class="row py-5">
@@ -86,52 +92,78 @@
               <i class="devicon-express-original"
                 style="font-size:70px;"
               ></i>
+              <p>Express.js</p>
             </div>
             <div class="col-2">
               <i class="devicon-github-original colored"
                 style="font-size:70px;"
               ></i>
+              <p>Github</p>
             </div>
             <div class="col-2">
               <i class="devicon-heroku-line"
                 style="font-size:70px;"
               ></i>
+              <p>Heroku</p>
             </div>
             <div class="col-2">
               <i class="devicon-jquery-plain"
                 style="font-size:70px;"
               ></i>
+              <p>jQuery</p>
             </div>
             <div class="col-2">
               <i class="devicon-mysql-plain"
                 style="font-size:70px;"
               ></i>
+              <p>MySQL</p>
             </div>
             <div class="col-2">
               <i class="devicon-visualstudio-plain"
                 style="font-size:70px;"
               ></i>
+              <p>Visual Studio Code</p>
             </div>
           </div>
             <div class="row py-5">
-              <div class="col-4">
+              <div class="col-2">
                 <i class="devicon-mongodb-plain"
                   style="font-size:70px;"
                 ></i>
+              <p>Mongo DB</p>
               </div>
-              <div class="col-4">
+              <div class="col-2">
                 <i class="devicon-npm-original-wordmark"
                   style="font-size:70px;"
                 ></i>
+                <p>Node Package Manager</p>
               </div>
-              <div class="col-4">
+              <div class="col-2">
                 <i class="devicon-slack-plain"
                   style="font-size:70px;"
                 ></i>
+                <p>Slack</p>
+              </div>
+              <div class="col-2">
+                <i class="devicon-git-plain"
+                  style="font-size:70px;"
+                ></i>
+                <p>Git</p>
+              </div>
+              <div class="col-2">
+                <i class="devicon-trello-plain"
+                  style="font-size:70px;"
+                ></i>
+                <p>Trello</p>
+              </div>
+              <div class="col-2">
+                <i class="devicon-sequelize-plain"
+                  style="font-size:70px;"
+                ></i>
+                <p>Sequelize</p>
               </div>
           </div>
-
-    <h1 class="folioheader" id="portfolio">Projects</h1>
+    <h1 id="portfolio"><b>Projects</b></h1>
     <!--top row of card-->
   <div class="card my-5" id="backgroundCard">
     <div class="container-folio">
