--- a/index.html
+++ b/index.html
@@ -163,18 +163,55 @@
                 <p>Sequelize</p>
               </div>
           </div>
-    <h1 id="portfolio"><b>Projects</b></h1>
-    <!--top row of card-->
-  <div class="card my-5" id="backgroundCard">
-    <div class="container-folio">
-      <div class="col-md-12">
-        <div class="row">
-          <!--card 1-->
+  <div>
+    <h1 id="portfolio" class="py-5"><b>Projects</b></h1>
+    <div id="carouselExampleControls" class="carousel slide col-10 mx-auto" data-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="w-100" src="assets/Media/parks_n_req.png" alt="Parks n Req" style="height:800px;">
+          <div class="carousel-caption d-none d-md-block">
+            <a href="https://github.com/ashlinhanson/Parks_n_Req" target="_blank" style="color:white"><h2><strong>Parks_n_Req</strong></h2></a>
+            <p>This app provides information about Texas NPS parks and campgrounds and allows the user to make a reservation at their selected site.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img class="w-100" src="assets/Media/inBloom.png" alt="inBloom" style="height:800px;">
+          <div class="carousel-caption d-none d-md-block">
+            <h3 style="color:black"><strong>inBloom</strong></h3>
+            <p style="color:black">sdfsdfsdf</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img class="w-100" src="assets/Media/code-quiz.png" alt="Code Quiz" style="height:800px;">
+          <div class="carousel-caption d-none d-md-block">
+            <h3><strong>Code Quiz</strong></h3>
+            <p>.sdfsdf</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img class="w-100" src="assets/Media/weekday.png" alt="Weekly Planner" style="height:800px;">
+          <div class="carousel-caption d-none d-md-block">
+            <h3 style="color:black"><strong>Week Day Planner</strong></h3>
+            <p style="color:black">This web application is designed to help the user organize
+              their workday by the hour.</p>
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+  </div>
+</div>
           <div class="col-md-4">
             <div class="card">
               <img src="assets/Media/weekday.png" class="card-img-top" alt="Week Day Planner" style="height: 350px"/>
               <div class="card-body">
-                <h5 class="card-title">Week Day Planner</h5>
+                <h3 class="card-title">Week Day Planner</h3>
                 <p class="card-text">
                   This web application is designed to help the user organize
                   their workday by the hour.
@@ -326,7 +363,7 @@
       lowlightColor: 0x0,
       baseColor: 0xe2edf5,
       speed: 0.70,
-      zoom: 0.50
+      zoom: 3
 })
     </script>
   </body>
