--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>Ashli</title>
+    <title>Ashli Hanson</title>
 
     <!-- Bootstrap and CSS links -->
     <link rel="stylesheet" href="assets/CSS/reset.css" />
